package pt.ipp.isep.dei.esoft.project.domain;

public class StoreNetWork {

    private String name;
    private String address;

    public StoreNetWork(String name, String address) {
        this.name = name;
        this.address = address;
    }

}
