@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize "1"

'left to right direction
class CreateEmployeeUI{
}

class CreateEmployeeController{

}

class user{
    - name
    - descriptions
    - tax number
    - address
    - email address
    - phone number
    - password

}

class RealEstate {
    - name
    - address
    - descriptions
    - website
    - phoneNumber
    - email
    - vatNumber

}
class Employee extends user{
    -salary
}

class Administrator extends user{

}
class Store {
    - name
    - vatNumber
    - website
    - phoneNumber
    - email
    - LocalManager

}
class StoreNetWork{
    + createStore(ID, designation/name, \n location, phone number, e-mail)
    + validate(store)
    + addStore(store)
    - String name
    - String address
    - int branchNumber
}
Store "1" -- "0..*" Employee : has >
StoreNetWork "1" -- "0..*" Store : has >
RealEstate "1" -- "1" StoreNetWork : has >


@enduml